--- a/mobile.css
+++ b/mobile.css
@@ -1,8 +1,11 @@
 
 .logo{
-    
     width: 100%;
-    height:50%;
-    margin-left: 1%;
-    margin-bottom: -2%;
+    height: 200px;
+    margin: 0 auto; 
+    align-content: center;
 }
+
+.navbar-default {
+    background-color: #f8f8f8;
+    border-color: #e7e7e7;
