--- a/landscape.css
+++ b/landscape.css
@@ -106,11 +106,11 @@ carousel.less:193
 }
 
 div.gallery {
-    border: 1px solid #ccc;
+    border: 5px solid #4431a4;
 }
 
 div.gallery:hover {
-    border: 1px solid #777;
+    border: 5px solid #6ba6da;
 }
 
 div.gallery img {
