banner op diensten/ contactpage
gezorgt voor een banner op de pagina's: Diensten en Contact zodat men een mooier en overzichterijkere blik op de website krijgt

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6713,7 +6713,7 @@ height: 20px;
 /*voor onze pakketen op pagina diensten*/
 #wrapper2{
     
-    width: 81%;
+    width: 80%;
     margin: 0 auto;
     font-family:'Josefin sans', sans-serif;
     
@@ -6741,4 +6741,10 @@ strong{
 
 #myBtn:hover {
   background-color: deepskyblue;
+}
+
+.bg-primary{
+    background-color: #4431a4;
+    height: 50px;
+    text-align: center;
 }
