--- a/landscape.css
+++ b/landscape.css
@@ -130,7 +130,8 @@ div.desc {
 .responsive {
     padding: 0 10px;
     float: left;
-    width: 24.99999%;
+    width: 29.99999%;
+    align-content: center;
 }
 
 @media only screen and (max-width: 700px){
@@ -153,5 +154,7 @@ div.desc {
 }
 
 
+#container{
+    margin-left: 9%;
+}
     
-
