--- a/mobile.css
+++ b/mobile.css
@@ -57,3 +57,34 @@ height: 200px;
     margin-left: 10%;
     
 }
+
+#container{
+    margin-left: 0%;
+}
+
+a.lightbox img {
+height: 200px;
+border: 5px solid #4431a4;
+box-shadow: 0px 0px 8px rgba(0,0,0,.3);
+width: 95%;
+margin: 0 auto;
+margin-left: 2%;
+margin-top: 20px;
+}
+
+a.lightbox img:hover {
+height: 200px;
+border: 5px solid #6ba6da;
+box-shadow: 0px 0px 8px rgba(0,0,0,.3);
+width: 95%;
+margin: 0 auto;
+margin-left: 2%;
+margin-top: 20px;
+}
+
+
+#wrapper-3{
+     width: 85%;
+    margin: 0 auto;
+
+}
