--- a/mobile.css
+++ b/mobile.css
@@ -88,3 +88,15 @@ margin-top: 20px;
     margin: 0 auto;
 
 }
+.socialmedia1{
+    display:none;
+}
+
+.socialmedia{
+    display:flex;
+    
+}
+
+
+
+
