--- a/landscape.css
+++ b/landscape.css
@@ -103,6 +103,7 @@ carousel.less:193
 #kolom-3 {
     color:  #993399;;
     background-color: #993399;
+    text-align: center;
 }
 
 #container{
@@ -110,127 +111,114 @@ carousel.less:193
 }
 
 
-
-/* Styles the thumbnail */
-
-a.lightbox img {
+.thumb {
 height: 250px;
-border: 5px solid #4431a4;
+border: 8px solid #4431a4;
 box-shadow: 0px 0px 8px rgba(0,0,0,.3);
 margin: 20px 20px 20px 20px;
 }
 
-a.lightbox img:hover {
-height: 250px;
-border: 5px solid #6ba6da;
+.thumb:hover{
+    height: 250px;
+border: 8px solid #6ba6da;
 box-shadow: 0px 0px 8px rgba(0,0,0,.3);
 margin: 20px 20px 20px 20px;
 }
 
-/* Styles the lightbox, removes it from sight and adds the fade-in transition */
 
-.lightbox-target {
-position: fixed;
-top: -100%;
-width: 100%;
-background: rgba(0,0,0,.7);
-width: 100%;
-opacity: 0;
--webkit-transition: opacity .5s ease-in-out;
--moz-transition: opacity .5s ease-in-out;
--o-transition: opacity .5s ease-in-out;
-transition: opacity .5s ease-in-out;
-overflow: hidden;
+
+#thumblist {
+  text-align: center;
+  border: 4px solid #4431a4;
+  border-radius: 8px;
+  padding: 0;
+  background: rgba(127, 127, 127, .8);
 }
 
-/* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
-
-.lightbox-target img {
-margin: auto;
-position: absolute;
-top: 0;
-left:0;
-right:0;
-bottom: 0;
-max-height: 0%;
-max-width: 0%;
-border: 3px solid white;
-box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-box-sizing: border-box;
--webkit-transition: .5s ease-in-out;
--moz-transition: .5s ease-in-out;
--o-transition: .5s ease-in-out;
-transition: .5s ease-in-out;
+#thumblist img {
+  border-radius: 4px;
 }
 
 
-/* Styles the close link, adds the slide down transition */
+.description {
+  color: white;
+  text-decoration: none;
+}
+/** relevant CSS Below **/
 
-a.lightbox-close {
-display: block;
-width:50px;
-height:50px;
-box-sizing: border-box;
-background: white;
-color: black;
-text-decoration: none;
-position: absolute;
-top: -80px;
-right: 0;
--webkit-transition: .5s ease-in-out;
--moz-transition: .5s ease-in-out;
--o-transition: .5s ease-in-out;
-transition: .5s ease-in-out;
+.lightbox {
+  display: none;
+  /**sets the default display to hide the lightbox until it's the :target**/
+  
+  position: fixed;
+  /**the rest of this styling makes the lightbox full screen when selected**/
+  
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, .8);
 }
 
-/* Provides part of the "X" to eliminate an image from the close link */
-
-a.lightbox-close:before {
-content: "";
-display: block;
-height: 30px;
-width: 1px;
-background: black;
-position: absolute;
-left: 26px;
-top:10px;
--webkit-transform:rotate(45deg);
--moz-transform:rotate(45deg);
--o-transform:rotate(45deg);
-transform:rotate(45deg);
+.lightbox img {
+  /**sets the styling of the image in the lightbox**/
+  
+  max-width: 80%;
+  max-height: 90%;
+  text-align: center;
+  margin-top: 2%;
+  border: 8px solid #4431a4;
 }
 
-/* Provides part of the "X" to eliminate an image from the close link */
-
-a.lightbox-close:after {
-content: "";
-display: block;
-height: 30px;
-width: 1px;
-background: black;
-position: absolute;
-left: 26px;
-top:10px;
--webkit-transform:rotate(-45deg);
--moz-transform:rotate(-45deg);
--o-transform:rotate(-45deg);
-transform:rotate(-45deg);
+.lightbox img:hover {
+  /**sets the styling of the image in the lightbox**/
+  
+  max-width: 80%;
+  max-height: 90%;
+  text-align: center;
+  margin-top: 2%;
+  border: 8px solid #6ba6da;
+  
 }
 
-/* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
-
-.lightbox-target:target {
-opacity: 1;
-top: 0;
-bottom: 0;
+.lightbox:target {
+  /**this is where the magic happens. makes the lightbox display when it's the target of a clickable link**/
+  
+  outline: none;
+  display: block;
 }
 
-.lightbox-target:target img {
-max-height: 100%;
-max-width: 100%;
+.previous {
+  /**styling the left arrow**/
+  
+  position: fixed;
+  left: 4px;
+  top: 40%;
+  width: 40px;
+  font-size: 40px;
+  
 }
 
-.lightbox-target:target a.lightbox-close {
-top: 0px;
+.exit {
+  /**styling the exit button**/
+  
+  position: fixed;
+  top: 4px;
+  right: 4px;
+  width: 40px;
+  font-size: 40px;
+  
 }
 
+.next {
+  /**styling the right arrow**/
+  
+  position: fixed;
+  right: 4px;
+  top: 40%;
+  width: 40px;
+  font-size: 40px;
+  
+}
