--- a/mobile.css
+++ b/mobile.css
@@ -59,27 +59,7 @@ height: 200px;
 }
 
 #container{
-    margin-left: 0%;
-}
-
-a.lightbox img {
-height: 200px;
-border: 5px solid #4431a4;
-box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-width: 95%;
-margin: 0 auto;
-margin-left: 2%;
-margin-top: 20px;
-}
-
-a.lightbox img:hover {
-height: 200px;
-border: 5px solid #6ba6da;
-box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-width: 95%;
-margin: 0 auto;
-margin-left: 2%;
-margin-top: 20px;
+    margin-left: -1%;
 }
 
 
@@ -88,3 +68,116 @@ margin-top: 20px;
     margin: 0 auto;
 
 }
+
+.thumb {
+height: 200px;
+border: 8px solid #4431a4;
+box-shadow: 0px 0px 8px rgba(0,0,0,.3);
+margin: 20px 20px 20px 20px;
+max-width: 100%;
+
+}
+
+.thumb:hover{
+height: 200px;
+border: 8px solid #6ba6da;
+box-shadow: 0px 0px 8px rgba(0,0,0,.3);
+margin: 20px 20px 20px 20px;
+}
+
+#thumblist {
+  text-align: center;
+  border: 4px solid #4431a4;
+  border-radius: 8px;
+  padding: 0;
+  background: rgba(127, 127, 127, .8);
+}
+
+#thumblist img {
+  border-radius: 4px;
+}
+
+
+.description {
+  color: white;
+  text-decoration: none;
+}
+/** relevant CSS Below **/
+
+.lightbox {
+  display: none;
+  /**sets the default display to hide the lightbox until it's the :target**/
+  
+  position: fixed;
+  /**the rest of this styling makes the lightbox full screen when selected**/
+  
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, .8);
+}
+
+.lightbox img {
+  /**sets the styling of the image in the lightbox**/
+  
+  max-width: 80%;
+  max-height: 90%;
+  text-align: center;
+  margin-top: 50%;
+  border: 8px solid #4431a4;
+}
+
+.lightbox img:hover {
+  /**sets the styling of the image in the lightbox**/
+  
+  max-width: 80%;
+  max-height: 90%;
+  text-align: center;
+  margin-top: 50%;
+  border: 8px solid #6ba6da;
+  
+}
+
+.lightbox:target {
+  /**this is where the magic happens. makes the lightbox display when it's the target of a clickable link**/
+  
+  outline: none;
+  display: block;
+}
+
+.previous {
+  /**styling the left arrow**/
+  
+  position: fixed;
+  left: 10%;
+  top: 40%;
+  width: 40px;
+  font-size: 40px;
+  
+}
+
+.exit {
+  /**styling the exit button**/
+  
+  position: fixed;
+  top: 25%;
+  right: 4px;
+  width: 40px;
+  font-size: 40px;
+  
+}
+
+.next {
+  /**styling the right arrow**/
+  
+  position: fixed;
+  right: 10%;
+  top: 40%;
+  width: 40px;
+  font-size: 40px;
+  
+}
+
