--- a/mobile.css
+++ b/mobile.css
@@ -59,12 +59,12 @@ height: 200px;
 }
 
 #container{
-    margin-left: -1%;
+    margin-left: 0%;
 }
 
 
 #wrapper-3{
-     width: 85%;
+     width: 70%;
     margin: 0 auto;
 
 }
@@ -73,7 +73,7 @@ height: 200px;
 height: 200px;
 border: 8px solid #4431a4;
 box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-margin: 20px 20px 20px 20px;
+margin: 20px 20px 20px 1px;
 max-width: 100%;
 
 }
@@ -181,3 +181,6 @@ margin: 20px 20px 20px 20px;
   
 }
 
+.socialmedia1{
+    display:none;
+}
