--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6775,5 +6775,87 @@ height: 300px;
     display:none;
 }
 
+*{
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+			font-family: helvetica;
+		}
+		body{
+			background-color: #FFFFFF;
+		}
+		.main{
+			width: 500px;
+			margin: 50px auto;
+			border-radius: 10px;
+			border: 5px solid #6ba6da;
+			border-left: 5px solid #6ba6da;
+			box-shadow: 1px 2px 10px #555;
+            margin-left: 67%;
+            margin-top: -37px;
+		}
+		.info{
+			width: 100%;
+			background-color: #4431a4;
+			padding: 7px;
+			text-shadow: 1px 1px 1px #222;
+			color: #fff;
+			font-size: 20px;
+		}
+		.form-box{
+			padding: 20px;
+			background-color: #FFF;
+		}
+		label{
+			color: navy;
+			font-size: 18px;
+		}
+		.inp,.msg-box{
+			width: 100%;
+			padding: 10px;
+			margin-top: 4px;
+			margin-bottom: 5px;
+			border-radius: 5px;
+			border: 2px solid #6ba6da;
+			font-weight: bold;
+			color: #4431a4;
+			border-right: 15px solid #6ba6da;
+			border-left: 15px solid #6ba6da;
+			resize: none;
+		}
+		.msg-box{
+			height: 80px;
+		}
+		.inp:focus,.msg-box:focus{
+			outline: none;
+			border: 2px solid navy;
+			border-right: 15px solid navy;
+			border-left: 15px solid navy;
+		}
+		.sub-btn{
+			width: 100%;
+			padding: 10px;
+			border-radius: 5px;
+			margin-top: 5px;
+			border: none;
+			background: linear-gradient(#4431a4,#6ba6da);
+			cursor: pointer;
+			color: #fff;
+			font-size: 20px;
+			text-shadow: 1px 1px 1px #444;
+		}
+		.sub-btn:hover{
+			background: linear-gradient(#4431a4,#6ba6da);
+			opacity: 0.8;
+			transition: all ease-out 0.2s;
+		}
+		.sub-btn:focus{
+			outline: none;
+		}
+		@media(max-width: 720px){
+			.main{
+				width: 90%;
+			}
+		}
 
 
