--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6775,6 +6775,13 @@ height: 300px;
     display:none;
 }
 
+iframe{
+ width: 100%;
+height: 300px;
+margin-top: -73px;
+margin-bottom: -7px;     
+}
+
 *{
 			margin: 0;
 			padding: 0;
