--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6782,25 +6782,17 @@ margin-top: -73px;
 margin-bottom: -7px;     
 }
 
-*{
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-			font-family: helvetica;
-		}
-		body{
-			background-color: #FFFFFF;
-		}
-		.main{
+
+		#main{
 			width: 500px;
-			margin: 50px auto;
+			margin-left: 63%;
 			border-radius: 10px;
 			border: 5px solid #6ba6da;
 			border-left: 5px solid #6ba6da;
 			box-shadow: 1px 2px 10px #555;
-            margin-left: 10%;
-            margin-top: -37px;
+
 		}
+
 		.info{
 			width: 100%;
 			background-color: #4431a4;
@@ -6860,8 +6852,10 @@ margin-bottom: -7px;     
 			outline: none;
 		}
 		@media(max-width: 720px){
-			.main{
+			#main{
+                margin-left: 5%;
 				width: 90%;
+               
 			}
 		}
 
