--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6751,6 +6751,7 @@ strong{
     height: 50px;
     text-align: center;
     margin-top:-2%;
+    z-index: -1;
 }
 
 .bg-info{
@@ -6779,26 +6780,19 @@ iframe{
  width: 100%;
 height: 300px;
 margin-top: -73px;
-margin-bottom: -7px;     
+margin-bottom: -7px;
+z-index: -2;
 }
 
-*{
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-			font-family: helvetica;
-		}
-		body{
-			background-color: #FFFFFF;
-		}
-		.main{
+
+
+		#main{
 			width: 500px;
-			margin: 50px auto;
+			margin-left: 63%;
 			border-radius: 10px;
 			border: 5px solid #6ba6da;
 			border-left: 5px solid #6ba6da;
 			box-shadow: 1px 2px 10px #555;
-            margin-left: 10%;
             margin-top: -37px;
 		}
 		.info{
@@ -6860,7 +6854,8 @@ margin-bottom: -7px;     
 			outline: none;
 		}
 		@media(max-width: 720px){
-			.main{
+			#main{
+                margin-left: 5%;
 				width: 90%;
 			}
 		}
