--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6807,7 +6807,7 @@ li{
 
 
 
-footer { background-color:#4431a4; min-height:350px; font-family: 'Open Sans', sans-serif; }
+footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', sans-serif; }
 .footer-col { margin-top:50px; }
 .logofooter { margin-bottom:10px; font-size:25px; color:#fff; font-weight:700;}
 
@@ -6820,7 +6820,7 @@ footer { background-color:#4431a4; min-height:350px; font-family: 'Open Sans', s
 .footer-ul i { margin-right:10px;}
 .footer-ul li a:hover {transition: color 0.2s linear 0s, background 0.2s linear 0s; color:#ff670f; }
 
- .copyright { min-height:40px; background-color:#000000;}
+ .copyright { min-height:40px; background-color:#68a6da;}
  .copyright p { text-align:left; color:#FFF; padding:10px 0; margin-bottom:0;}
  .heading7 { font-size:21px; font-weight:700; color:#d9d6d6; margin-bottom:22px;}
  .post p { font-size:12px; color:#FFF; line-height:20px;}
