--- a/mobile.css
+++ b/mobile.css
@@ -182,7 +182,9 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 .footer-ul i { margin-right:10px;}
 .footer-ul li a:hover {transition: color 0.2s linear 0s, background 0.2s linear 0s; color:#ff670f; }
 
- .copyright { max-height:80px; background-color:#68a6da;}
+ .copyright { max-height:80px; background-color:#68a6da;     position: absolute;
+    width: 100%;
+    bottom: 0px;}
  .copyright p { text-align:left; color:#FFF; padding:7px 0; margin-bottom:0;}
  .heading7 { font-size:21px; font-weight:700; color:#d9d6d6; margin-bottom:22px; display:none;}
  .post p { font-size:12px; color:#FFF; line-height:20px;}
