--- a/landscape.css
+++ b/landscape.css
@@ -223,4 +223,15 @@ margin: 20px 33px 20px 20px;
   
 }
 
+.jumbotron {
+    background-image: url("../Sync-Development/images/Jumbotron.jpg");
+    background-size:cover;
+    -webkit-filter: blur(5px);
+  filter: blur(5.5px);
+
+
+}
+
+
+
 
