--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6651,6 +6651,12 @@ height: 20px;
     margin: 0 auto;
     font-family:'Josefin sans', sans-serif; 
 }
+#wrapper3{
+    
+    width: 100%;
+    margin: 0 auto;
+    background-color: #E6E6E6;
+}
 
 
 
@@ -6723,12 +6729,12 @@ z-index: -2;
 
 		#main{
 			width: 500px;
-			margin-left: 1%;
+			margin-left: 33%;
 			border-radius: 10px;
 			border: 5px solid #6ba6da;
 			border-left: 5px solid #6ba6da;
 			box-shadow: 1px 2px 10px #555;
-            margin-top: -37px;
+            margin-top: -10%;
 		}
 		.info{
 			width: 100%;
