--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6687,11 +6687,21 @@ strong{
   background-color: deepskyblue;
 }
 
-.bg-primary{
+.bg-primary-1{
     background-color: #4431a4;
     height: 50px;
     text-align: center;
     margin-top:-2%;
+    margin-bottom: -1%;
+    z-index: -1;
+}
+
+.bg-primary-2{
+    background-color: #4431a4;
+    height: 50px;
+    text-align: center;
+    margin-top:-1.3%;
+    margin-bottom: -2%;
     z-index: -1;
 }
 
@@ -6722,7 +6732,6 @@ iframe{
 height: 300px;
 margin-top: -73px;
 margin-bottom: -7px;
-z-index: -2;
 }
 
 
