--- a/css/ipad.css
+++ b/css/ipad.css
@@ -1,10 +1,5 @@
 
-.logo{
-    width: 100%;
-    height: 200px;
-    margin: 0 auto; 
-    align-content: center;
-}
+
 
 .navbar-default {
     background-color: #f8f8f8;
@@ -271,3 +266,68 @@ margin: 20px 33px 20px 20px;
 #container {
     margin-left: 25%;
 }
+
+.socialmedia1{
+    display:none;
+}
+
+.socialmedia{
+    display:flex;
+}
+
+footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', sans-serif;  display:none;  }
+.footer-col { margin-top:13px; }
+.logofooter { margin-bottom:10px; font-size:25px; color:#fff; font-weight:700; display:none; }
+
+.footer-col p { color:#fff; font-size:12px; font-family: 'Open Sans', sans-serif; margin-bottom:15px; }
+.footer-col p i { width:20px; color:#999;}
+
+.footer-ul { list-style-type:none;  padding-left:0; margin-left:2px;}
+.footer-ul li { line-height:29px; font-size:12px; display:none;}
+.footer-ul li a { color:#a0a3a4; transition: color 0.2s linear 0s, background 0.2s linear 0s; }
+.footer-ul i { margin-right:10px;}
+.footer-ul li a:hover {transition: color 0.2s linear 0s, background 0.2s linear 0s; color:#ff670f; }
+
+ .copyright { max-height:80px; background-color:#68a6da;     position: absolute;
+    width: 100%;
+    margin-bottom: 0px;}
+ .copyright p { text-align:left; color:#FFF; padding:7px 0; margin-bottom:0;}
+ .heading7 { font-size:21px; font-weight:700; color:#d9d6d6; margin-bottom:22px; display:none;}
+ .post p { font-size:12px; color:#FFF; line-height:20px;}
+ .post p span { display:block; color:#8f8f8f;}
+ .bottom_ul { list-style-type:none; float:right; margin-bottom:0;}
+ .bottom_ul li { float:left; line-height:40px; display:none;}
+ .bottom_ul li:after { content:"/"; color:#FFF; margin-right:8px; margin-left:8px;}
+ .bottom_ul li a { color:#FFF;  font-size:12px; display: none;}
+.social-icon {
+    width: 30px;
+    height: 30px;
+    font-size: 15px;
+    background-color: blue;
+    color: #fff;
+    text-align: center;
+    margin-right: 10px;
+    padding-top: 7px;
+    border-radius: 50%;
+}
+.footer-social1{
+    display:flex;
+}
+.footer-social{
+    display:none;
+}
+ .footer-social li{
+     float:left;
+ }
+ .linked-in{
+     background-color:#007bb6;
+ }
+ .facebook{
+     background-color:#3b5998;
+ }
+ .twitter{
+     background-color:#1da1f2;
+ }
+ .google{
+     background-color:#f63e28;
+ }
