--- a/css/ipad.css
+++ b/css/ipad.css
@@ -47,9 +47,9 @@
 }
 
 iframe{
- max-width: 80%;
+ max-width: 100%;
 height: 200px;
-    margin-left: 10%;
+    margin-left: 0%;
     
 }
 
@@ -290,8 +290,10 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 
  .copyright { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
-     margin-bottom:0px; }
-
+     bottom: 0px; }
+ .copyright2 { max-height:80px; background-color:#68a6da;     position: absolute;
+    width: 100%;
+     margin-bottom: 0px; }
  .copyright p { text-align:left; color:#FFF; padding:7px 0; margin-bottom:0;}
  .heading7 { font-size:21px; font-weight:700; color:#d9d6d6; margin-bottom:22px; display:none;}
  .post p { font-size:12px; color:#FFF; line-height:20px;}
@@ -332,3 +334,14 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
  .google{
      background-color:#f63e28;
  }
+
+
+
+
+/*banner kleur*/
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border-color: white;
+}
+.navbar-default {
+    background-color: #ffffff;
+    border-color: #ffffff;
