--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4115,6 +4115,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > li > a {
   color: #4431a4;
 }
+ 
+
+ .navbar-default .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: purple;
@@ -6636,9 +6642,23 @@ hr {
 }
 
 /*hover menu*/
+/*Dit zorgt ervoor dat het menu een animatie krijgt wanneer je met je muis erover heen gaat */
+
 .active2 {
+  transition: 0.4s ease;
+  background: white;
+  color: navy;
+  font-size: 20px;
+  text-decoration: none;
+  border-bottom: 4px Solid white;
+  padding: 20px 0;
+  margin: 0 20px;
+
+}
+
+.active2:hover {
 border-bottom: 4px solid purple;
-  padding: 6px 0; 
+  padding: 4px 0; 
     
 }
 
