--- a/css/ipad.css
+++ b/css/ipad.css
@@ -345,3 +345,22 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 .navbar-default {
     background-color: #ffffff;
     border-color: #ffffff;
+}
+
+.active2 {
+  transition: 0.4s ease;
+  background: white;
+  color: navy;
+  font-size: 20px;
+  text-decoration: none;
+  border-bottom: 4px Solid white;
+  padding: 20px 0;
+  margin: 0 20px;
+
+}
+
+.active2:hover {
+border-bottom: 4px solid purple;
+  padding: 4px 0; 
+    
+}
