--- a/css/ipad.css
+++ b/css/ipad.css
@@ -14,6 +14,40 @@
     display:none;
 }
 
+/*scroll-up*/
+#return-to-top {
+    position: fixed;
+    bottom: 11%;
+    right: 20px;
+   
+    width: 25%;
+    height: 35px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top i {
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
 .footer-bottom{
     background: #E3E3E3;
     border-top: 1px solid #DDDDDD;
@@ -290,7 +324,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 
  .copyright { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
-     bottom: 0px; }
+     margin-bottom: 0px; }
  .copyright2 { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
      margin-bottom: 0px; }
