Revert "Kleine stijl aanpassingen"
This reverts commit 30c17462718610eee108e5b65b2b9a188b3df4c9.

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6646,10 +6646,11 @@ hr {
 
 .active2 {
   transition: 0.4s ease;
+  background: white;
   color: navy;
   font-size: 20px;
   text-decoration: none;
-  border-bottom: 4px Solid  transparent;
+  border-bottom: 4px Solid white;
   padding: 20px 0;
   margin: 0 20px;
 
@@ -6668,7 +6669,6 @@ border-bottom: 4px solid purple;
     width: 80%;
     margin: 0 auto;
     font-family:'Josefin sans', sans-serif; 
-    text-align: center;
 }
 #wrapper3{
     
