--- a/mobile.css
+++ b/mobile.css
@@ -327,3 +327,11 @@ body {
     margin-bottom: 0px;
     border: 0px solid transparent;
 }
+
+.flag2{
+           display: flex;
+    position: fixed;
+    margin-left: 87%;
+    margin-bottom: -9%;
+    margin-top: 22px;
+}
