--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6675,9 +6675,15 @@ border-bottom: 4px solid purple;
     width: 100%;
     margin: 0 auto;
     background-color: white;
-    text-align: center;
 }
 
+#wrapper4{
+    
+    width: 100%;
+    margin: 0 auto;
+    background-color: white;
+    text-align: center;
+}
 
 
 
