--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6562,6 +6562,7 @@ button.close {
     width: 100%;
     height: auto;
     margin-left: 0%;
+    margin-top: 1%;
 }
     
 .carousel-control.right {
