--- a/mobile.css
+++ b/mobile.css
@@ -357,3 +357,18 @@ body {
     margin-top: 0%;
 }
 
+.bg-img4 {
+    /* The image used */
+    background-image: url("../images/Seo-2.jpg");
+
+    /* Set a specific height */
+    min-height: 400px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 46%;
+}    
+
