--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6579,7 +6579,7 @@ button.close {
 .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
     display: block;
     width: 100%;
-    height: auto;
+    max-height: 550px;
     margin-left: 0%;
     margin-top: 1%;
 }
