--- a/bootstrap.css
+++ b/bootstrap.css
@@ -2916,8 +2916,8 @@ fieldset[disabled] .btn-success.active {
 }
 .btn-info {
   color: #fff;
-  background-color: #5bc0de;
-  border-color: #46b8da;
+  background-color: #7816b4;
+  border-color: purple;
 }
 .btn-info:hover,
 .btn-info:focus,
@@ -2925,8 +2925,8 @@ fieldset[disabled] .btn-success.active {
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
   color: #fff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  background-color: #428bca;
+  border-color: lightblue;
 }
 .btn-info:active,
 .btn-info.active,
