--- a/css/ipad.css
+++ b/css/ipad.css
@@ -407,3 +407,9 @@ border-bottom: 4px solid purple;
         margin-left: -36%;
     margin-right: 29%;
 }
+
+#button-1 {
+    margin: 0 auto;
+    margin-top: 10%;
+    margin-left: -23%;
+}
