--- a/css/Ipad-landscape.css
+++ b/css/Ipad-landscape.css
@@ -89,6 +89,12 @@ height: 200px;
     margin: 0 auto;
 
 }
+#wrapper2 {
+    width: 100%;
+    margin: 0 auto;
+    font-family: 'Josefin sans', sans-serif;
+    text-align: center;
+}
 
 .thumb {
 height: 200px;
@@ -189,6 +195,12 @@ margin: 20px 20px 20px 20px;
   width: 40px;
   font-size: 40px;
   
+}
+
+#button-1 {
+    margin: 0 auto;
+    margin-top: 2%;
+    margin-left: 0%;
 }
 
 .next {
