Tekst kleur navbar veranderd naar banner kleur

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4136,7 +4136,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #777;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #7816b4;
+  color: #4431a3;
 }
  
 
