--- a/bootstrap.css
+++ b/bootstrap.css
@@ -911,16 +911,16 @@ p{
 }
 
 body h1{
-    color: #7816b4;
+    color: #4431a3;
 }
 
 body h2{
-    color: #7816b4;
+    color: #4431a3;
     font-family: 'Tauri', sans-serif;
 }
 
 body h3{
-    color: #7816b4;
+    color: #4431a3;
     font-family: 'Tauri', sans-serif;
 }
 
