--- a/css/ipad.css
+++ b/css/ipad.css
@@ -193,10 +193,10 @@ margin: 20px 20px 20px 20px;
   /**styling the left arrow**/
   
   position: fixed;
-  left: 10%;
-  top: 40%;
+  left: 3%;
+  top: 75%;
   width: 40px;
-  font-size: 40px;
+  font-size: 52px;
   
 }
 
@@ -204,10 +204,10 @@ margin: 20px 20px 20px 20px;
   /**styling the exit button**/
   
   position: fixed;
-  top: 25%;
-  right: 4px;
+  top: 16%;
+  right: 22px;
   width: 40px;
-  font-size: 40px;
+  font-size: 60px;
   
 }
 
@@ -215,10 +215,10 @@ margin: 20px 20px 20px 20px;
   /**styling the right arrow**/
   
   position: fixed;
-  right: 10%;
-  top: 40%;
+  right: 3%;
+  top: 75%;
   width: 40px;
-  font-size: 40px;
+  font-size: 52px;
   
 }
 
@@ -284,10 +284,10 @@ margin: 20px 33px 20px 20px;
 .lightbox img {
   /**sets the styling of the image in the lightbox**/
   
-  max-width: 80%;
+  min-width: 100%;
   max-height: 90%;
   text-align: center;
-  margin-top: 2%;
+  margin-top: 32%;
   border: 8px solid #4431a4;
 }
 
@@ -307,6 +307,7 @@ margin: 20px 33px 20px 20px;
   
   outline: none;
   display: block;
+  background-color: lightgrey;
 }
 
 #container {
