--- a/mobile.css
+++ b/mobile.css
@@ -152,7 +152,7 @@ margin: 20px 20px 20px 20px;
 .lightbox img {
   /**sets the styling of the image in the lightbox**/
   
-  max-width: 80%;
+  min-width: 100%;
   max-height: 90%;
   text-align: center;
   margin-top: 50%;
@@ -175,16 +175,17 @@ margin: 20px 20px 20px 20px;
   
   outline: none;
   display: block;
+  background-color: lightgrey;
 }
 
 .previous {
   /**styling the left arrow**/
   
   position: fixed;
-  left: 10%;
-  top: 40%;
+  left: 3%;
+  top: 70%;
   width: 40px;
-  font-size: 40px;
+  font-size: 45px;
   
 }
 
@@ -192,10 +193,10 @@ margin: 20px 20px 20px 20px;
   /**styling the exit button**/
   
   position: fixed;
-  top: 25%;
+  top: 19%;
   right: 4px;
   width: 40px;
-  font-size: 40px;
+  font-size: 49px;
   
 }
 
@@ -203,10 +204,10 @@ margin: 20px 20px 20px 20px;
   /**styling the right arrow**/
   
   position: fixed;
-  right: 10%;
-  top: 40%;
+  right: 3%;
+  top: 70%;
   width: 40px;
-  font-size: 40px;
+  font-size: 45px;
   
 }
 
