--- a/landscape.css
+++ b/landscape.css
@@ -224,10 +224,11 @@ margin: 20px 33px 20px 20px;
     background-image: url("../Sync-Development/images/3%20in%201%20pakket.jpg");
 
     /* Set a specific height */
-    min-height: 520px; 
+      /* Set a specific height */
+    min-height: 680px; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -280,13 +281,14 @@ margin: 20px 33px 20px 20px;
     background-image: url("../Sync-Development/images/Stap%20voor%20stap.jpg");
 
     /* Set a specific height */
-    min-height: 450px; 
+    min-height: 600px; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
 }  
 
     
@@ -326,8 +328,6 @@ margin: 20px 33px 20px 20px;
     .bg-img4 {
         background-attachment: scroll;
     }
-    
-    .bg-img5 {
-        background-attachment: scroll;
+ 
     }
 } 
