--- a/css/ipad.css
+++ b/css/ipad.css
@@ -420,3 +420,31 @@ border-bottom: 4px solid purple;
     margin-top: 2%;
     margin-left: 0%;
 }
+
+.bg-img1 {
+    /* The image used */
+    background-image: url("../images/3%20in%201%20pakket.jpg");
+
+    /* Set a specific height */
+    min-height: 400px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: scroll;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg-img5 {
+    /* The image used */
+    background-image: url("../images/Stap%20voor%20stap.jpg");
+
+    /* Set a specific height */
+    min-height: 400px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: scroll;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}  
