--- a/bootstrap.css
+++ b/bootstrap.css
@@ -911,16 +911,16 @@ p{
 }
 
 body h1{
-    color: #4431a3;
+    color: #124b8c;
 }
 
 body h2{
-    color: #4431a3;
+    color: #124b8c;
     font-family: 'Tauri', sans-serif;
 }
 
 body h3{
-    color: #4431a3;
+    color: #124b8c;
     font-family: 'Tauri', sans-serif;
 }
 
@@ -2920,8 +2920,8 @@ fieldset[disabled] .btn-success.active {
 }
 .btn-info {
   color: #fff;
-  background-color: #7816b4;
-  border-color: purple;
+  background-color: #124b8c;
+  border-color: #124b8c;
 }
 .btn-info:hover,
 .btn-info:focus,
@@ -2929,7 +2929,7 @@ fieldset[disabled] .btn-success.active {
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
   color: #fff;
-  background-color: #428bca;
+  background-color: #47c8e3;
   border-color: li;
 }
 .btn-info:active,
@@ -4136,7 +4136,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #777;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #4431a3;
+  color: #124b8c;
 }
  
 
@@ -4146,7 +4146,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: purple;
+  color: #124b8c;
  
 }
 .navbar-default .navbar-nav > .active > a,
@@ -6632,7 +6632,7 @@ carousel.less:193
     width: 12px;
     height: 12px;
     margin: 0;
-    background-color: #4431a4;
+    background-color: #124b8c;
 }
     
 .carousel-indicators li {
@@ -6670,7 +6670,7 @@ hr {
 
 .active2 {
   transition: 0.4s ease;
-  color: #7816b4;
+  color: #124b8c;
   font-size: 20px;
   text-decoration: none;
   border-bottom: 4px Solid transparent;
@@ -6680,7 +6680,7 @@ hr {
 }
 
 .active2:hover {
-border-bottom: 4px solid purple;
+border-bottom: 4px solid #124b8c;
   padding: 4px 0; 
     
 }
@@ -6772,33 +6772,6 @@ strong{
 
 #myBtn:hover {
 
-}
-
-.bg-primary-1{
-    background-color: #4431a4;
-    height: 50px;
-    text-align: center;
-    margin-top:-2%;
-    margin-bottom: -1%;
-    z-index: -1;
-    color: white;
-}
-
-.bg-primary-2{
-    background-color: #4431a4;
-    height: 50px;
-    text-align: center;
-    margin-top:-1.3%;
-    margin-bottom: -2%;
-    z-index: -1;
-}
-
-.bg-info{
-    background-color: #6ba6da;
-    height: 50px;
-    text-align: center;
-    margin-top:-2%;
-    color: white;
 }
 
 .caption{
