--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6806,7 +6806,7 @@ li{
 
 
 
-footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', sans-serif; }
+footer { background-color:#124b8c; max-height:320px; font-family: 'Open Sans', sans-serif; }
 .footer-col { margin-top:50px; }
 .logofooter { margin-bottom:10px; font-size:25px; color:#fff; font-weight:700;}
 
