--- a/css/ipad.css
+++ b/css/ipad.css
@@ -322,7 +322,7 @@ margin: 20px 33px 20px 20px;
     display:flex;
 }
 
-footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', sans-serif;   }
+footer { background-color:#124b8c; max-height:320px; font-family: 'Open Sans', sans-serif;   }
 .footer-col { margin-top:13px; }
 .logofooter { margin-bottom:10px; font-size:25px; color:#fff; font-weight:700; display:none; }
 
