--- a/landscape.css
+++ b/landscape.css
@@ -263,7 +263,7 @@ margin: 20px 33px 20px 20px;
 
 .bg-img4 {
     /* The image used */
-    background-image: url("../Sync-Development/images/Seo-2.jpg");
+    background-image: url("../images/Seo-2.jpg");
 
     /* Set a specific height */
     min-height: 400px; 
