--- a/mobile.css
+++ b/mobile.css
@@ -327,7 +327,7 @@ body {
     position: absolute;
     height: 4px;
     width: 90%;
-    background: #4431a4;
+    background: #114b8b;
     border-radius: 10px;
     opacity: 1;
     left: 0;
